# openkylinmenueditor

./: .gitignore  AGENTS.md  CMakeLists.txt  MANIFEST.in  Makefile  PEONY_PORTING_PLAN.md  README.md  env.pri  openkylinmenueditor-menu-validate.1  openkylinmenueditor.1  openkylinmenueditor.desktop.in  openkylinmenueditor.pro  setup.py  ukui-themes-filelist.txt  uninstall.py
.github/: lpbugtracker.py
backend/: backend.pri  desktopfilehandler.cpp  desktopfilehandler.h  menuparser.cpp  menuparser.h  menuwriter.cpp  menuwriter.h  xdgpaths.cpp  xdgpaths.h
data/: openkylinmenueditor-config.json
data/metainfo/: menulibre.appdata.xml.in
libukmge/: CMakeLists.txt  Makefile  interface.pri  libukmge.pro  libukmge.so.1.0  libukmge.so.1.0.0  libukmge_global.h  moc_closebutton.cpp  moc_predefs.h  moc_switchbutton.cpp  moc_ukccframe.cpp  widgets.pri
libukmge/interface/: interface.h
libukmge/widgets/CloseButton/: closebutton.cpp  closebutton.h  closebutton.pri
libukmge/widgets/FlowLayout/: flowlayout.cpp  flowlayout.h  flowlayout.pri
libukmge/widgets/SettingWidget/: settingwidget.pri  ukccframe.cpp  ukccframe.h
libukmge/widgets/SwitchButton/: switchbutton.cpp  switchbutton.h  switchbutton.pri
menulibre/: ApplicationEditor.py  Headerbar.py  MenulibreApplication.py  MenulibreTreeview.py  MenulibreXdg.py  icons.py  util.py
menulibre_qt/: __init__.py  action_editor.py  app.py  category_editor.py  dialogs.py  editor.py  file_handler.py  history.py  icon_entry.py  icons.py  menu_model.py  toolbar.py  treeview.py
openkylinmenueditor/: AdvancedPage.py  ApplicationEditor.py  CommandEditor.py  Dialogs.py  FieldLabel.py  FileHandler.py  MenuEditor.py  MenulibreApplication.py  MenulibreHistory.py  MenulibreTreeview.py  MenulibreXdg.py  Section.py  Toolbar.py  XmlMenuElementTree.py  __init__.py  icons.py  util.py
openkylinmenueditor_lib/: __init__.py  helpers.py  openkylinmenueditorconfig.py
openkylinmenueditor_qt/: __init__.py  action_editor.py  app.py  category_editor.py  dialogs.py  editor.py  file_handler.py  history.py  icon_entry.py  icons.py  menu_model.py  toolbar.py  treeview.py
po/: POTFILES.in
shell/: CMakeLists.txt  Makefile  applicationeditorwidget.cpp  applicationeditorwidget.h  editorwidget.cpp  editorwidget.h  leftsidebarwidget.cpp  leftsidebarwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  menutreewidget.cpp  menutreewidget.h  moc_applicationeditorwidget.cpp  moc_editorwidget.cpp  moc_leftsidebarwidget.cpp  moc_mainwindow.cpp  moc_menutreewidget.cpp  moc_mstackwidget.cpp  moc_searchbar.cpp  moc_titlewidget.cpp  mstackwidget.cpp  mstackwidget.h  openkylinmenueditor.desktop  qrc_resfile.cpp  searchbar.cpp  searchbar.h  shell.pro  titlewidget.cpp  titlewidget.h
shell/res/: resfile.qrc
shell/res/i18n/: en_US.ts  pt_BR.ts
shell/res/qss/: openkylinmenueditor.qss
